tests/build/cases/widget/module_path_missing.stderr
error: expected a macro_rules `$crate` path to this widget mod
 --> cases/widget/module_path_missing.rs:4:1
  |
4 | #[widget]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `$crate`
 --> cases/widget/module_path_missing.rs:4:1
  |
4 | #[widget]
  | ^^^^^^^^^ could not find `missing_widget_path` in the crate root
  |
  = note: this error originates in the macro `__widget_path__missing_widget_path__` (in Nightly builds, run with -Z macro-backtrace for more info)
