tests/build/cases/widget/module_path_missing.rs
use zero_ui::core::widget;

// path is missing
#[widget]
pub mod test_widget {
    inherit!(zero_ui::core::widget_base::base);
}

fn main() {}
